تغییرات طبق بروزرسانی ورژن جدید

--- a/Help/fa-IR/_00_شروع کار با راهنما/Index.html
+++ b/Help/fa-IR/_00_شروع کار با راهنما/Index.html
@@ -12,9 +12,9 @@
 		<h1> شروع کار با راهنما </h1>
 	</div>
 	<p>
-        کاربر گرامی، لازم به توضیح است که هر صفحه ای از نرم افزار سایان که در حال اجراست،
+        کاربر عزیز، لازم به توضیح است که هر صفحه ای از نرم افزار سایان که در حال اجراست،
 		 می توانید با فشردن کلید F1	 
-		راهنمای آموزشی مربوط به آن را مطالعه نمایید . تصویر زیر امکانات بخش مالی و حسابداری
+		راهنمای آموزشی مربوط به آن را مطالعه نمایید. تصویر زیر امکانات بخش مالی و حسابداری
 		و آموزش تعریف سرفصل  حساب ها می باشد.
 	</p>
 	<img class="FitPic" src="g1.jpg" />
@@ -26,7 +26,7 @@
 	<img class="FitPic" src="g2.jpg" />
 	<p>
 		در راهنمای نرم افزار سایان برای ذکر نکات مهم 
-	   از فرمتهای ذیل استفاده گردیده است : 
+	   از فرمتهای ذیل استفاده گردیده است: 
 		</p>
 	<p class="Info">
 		<img class="Icon" src="../info.png" />
